# ShadingMethods

./: .gitignore  CMakeLists.txt  LICENCE  README.md
cmake/Modules/: FindGLM.cmake  FindGlew.cmake  FindSDL2.cmake
data/: CMakeLists.txt
data/shaders/: phong.frag  phong.vert  shadowedphong.frag  shadowedphong.vert  shadowmap.frag  shadowmap.vert  simple.frag  simple.vert
src/: CMakeLists.txt
src/app/: Application.cpp  Application.h  CMakeLists.txt  CitySceneGenerator.cpp  CitySceneGenerator.h  Cube.h  KeyboardHandler.h  main.cpp
src/engine/: BVH.cpp  BVH.h  BaseSceneObject.cpp  BaseSceneObject.h  BoundingBox.cpp  BoundingBox.h  BoundingBoxDrawer.cpp  BoundingBoxDrawer.h  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Common.h  FpsCamera.cpp  FpsCamera.h  Interfaces.h  Light.cpp  Light.h  Material.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Query.h  RenderBatch.cpp  RenderBatch.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h  UniformBuffer.h  VertexArrayObject.h
src/utils/: ArrayRef.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Exception-win32.cpp  Exception.cpp  Exception.h  File.cpp  File.h  Frustum.cpp  Frustum.h  Helpers.h  Logging.cpp  Logging.h  Plane.h  Variant.h
